--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,10 @@ blinker==1.4
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
-
+cmake==3.15.3
 comtypes==1.1.10
 demjson==2.2.4
-
+dlib==19.7.0
 face-recognition==1.2.3
 face-recognition-models==0.3.0
 Flask==1.1.2
@@ -18,12 +18,12 @@ Jinja2==2.11.2
 MarkupSafe==1.1.1
 mysql-connector==2.2.9
 numpy==1.19.5
-
+opencv-python==4.5.1.48
 Pillow==8.2.0
-
+pypiwin32==223
 pyserial==3.5
 pyttsx3==2.90
+pywin32==301
 requests==2.25.1
 urllib3==1.26.3
 Werkzeug==1.0.1
-
